src/routes/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@font-face {
  font-display: swap;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/inter-v12-latin_latin-ext-regular.eot');
  src: url('/fonts/inter-v12-latin_latin-ext-regular.eot?#iefix') format('embedded-opentype'),
       url('/fonts/inter-v12-latin_latin-ext-regular.woff2') format('woff2'),
       url('/fonts/inter-v12-latin_latin-ext-regular.woff') format('woff'),
       url('/fonts/inter-v12-latin_latin-ext-regular.ttf') format('truetype')
}

@font-face {
  font-display: swap;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  src: url('/fonts/inter-v12-latin_latin-ext-500.eot');
  src: url('/fonts/inter-v12-latin_latin-ext-500.eot?#iefix') format('embedded-opentype'), 
       url('/fonts/inter-v12-latin_latin-ext-500.woff2') format('woff2'),
       url('/fonts/inter-v12-latin_latin-ext-500.woff') format('woff'),
       url('/fonts/inter-v12-latin_latin-ext-500.ttf') format('truetype')
      
} 


:root {
  font-family: 'Inter';
  font-size: 18px;
	--swiper-theme-color: #f2d21e;
}

html.smoothscroll{ scroll-behavior: smooth }

body {
  min-height: 100vh;
  margin: 0;
  background-attachment: fixed;
  background-size: 100vw 100vh;
  box-sizing: border-box;
}

h1,
h2 {
  font-weight: 500;
}

p {
  line-height: 1.5;
}

a {
  color: var(--color-theme-1);
  text-decoration: none;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.5rem;
}

pre {
  font-size: 16px;
  font-family: var(--font-mono);
  background-color: rgba(255, 255, 255, 0.45);
  border-radius: 3px;
  box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
  padding: 0.5em;
  overflow-x: auto;
  color: var(--color-text);
}

.text-column {
  display: flex;
  max-width: 48rem;
  flex: 0.6;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
}

input,
button {
  font-size: inherit;
  font-family: inherit;
}

button:focus:not(:focus-visible) {
  outline: none;
}

